<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_photo_detail"
                android:layout_width="match_parent"
                android:layout_height="358dp"
                android:background="@drawable/corner_shape"
                android:clipToOutline="true"
                android:src="@drawable/img_megamendung" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nama_batik"
            style="@style/Tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardview"
            android:text="@string/tes_batik" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_description"
            style="@style/h2"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/nama_batik"
            app:layout_constraintTop_toBottomOf="@+id/nama_batik" />

        <TextView
            android:id="@+id/batik_description"
            style="@style/body"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="8sp"
            android:textAlignment="viewStart"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            android:text="@string/tes_descrption" />

        <TextView
            android:id="@+id/tv_similar_motif"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/similar_motif"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="@+id/batik_description"
            app:layout_constraintTop_toBottomOf="@+id/batik_description" />






    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>

