<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_photo_detail"
            android:layout_width="600dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:background="@drawable/corner_shape"
            tools:src="@drawable/download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/nama_batik"
            style="@style/Tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_photo_detail"
            tools:text="@string/motif_batik" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_description"
            style="@style/h2"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/nama_batik"
            app:layout_constraintTop_toBottomOf="@+id/nama_batik" />

        <TextView
            android:id="@+id/batik_description"
            style="@style/body"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="8sp"
            android:justificationMode="inter_word"
            android:textAlignment="viewStart"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="@id/tv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            tools:text="@string/item_description" />

        <TextView
            android:id="@+id/tv_similar_motif"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/similar_motif"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="@+id/batik_description"
            app:layout_constraintTop_toBottomOf="@+id/batik_description" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="190dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_similar_motif">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv1"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="13dp"
                    android:padding="64dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp">
                    <ImageView
                        android:id="@+id/similar1"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        tools:src="@drawable/download" />


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="13dp"
                    android:padding="64dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp">
                    <ImageView
                        android:id="@+id/similar2"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        tools:src="@drawable/download" />


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="13dp"
                    android:padding="64dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp">
                    <ImageView
                        android:id="@+id/similar3"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        tools:src="@drawable/download" />


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="13dp"
                    android:padding="64dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp">
                    <ImageView
                        android:id="@+id/similar4"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        tools:src="@drawable/download" />


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="13dp"
                    android:padding="64dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp">
                    <ImageView
                        android:id="@+id/similar5"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        tools:src="@drawable/download" />


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="13dp"
                    android:padding="64dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp">
                    <ImageView
                        android:id="@+id/similar6"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        tools:src="@drawable/download" />


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="13dp"
                    android:padding="64dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp">
                    <ImageView
                        android:id="@+id/similar7"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        tools:src="@drawable/download" />


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="13dp"
                    android:padding="64dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp">
                    <ImageView
                        android:id="@+id/similar8"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        tools:src="@drawable/download" />


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="13dp"
                    android:padding="64dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp">
                    <ImageView
                        android:id="@+id/similar9"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        tools:src="@drawable/download" />


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="22dp"
                    android:padding="64dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="8dp">
                    <ImageView
                        android:id="@+id/similar10"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        tools:src="@drawable/download" />


                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </HorizontalScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/batik_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>

